WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130292
[WebGL] Broken WEBGL_compressed_texture_pvrtc extension support
https://bugs.webkit.org/show_bug.cgi?id=130292
Summary
[WebGL] Broken WEBGL_compressed_texture_pvrtc extension support
Byungseon(Sun) Shin
Reported
2014-03-15 07:28:51 PDT
WebGLRenderingContext::getExtension of WEBGL_compressed_texture_pvrtc extension returns always null.
Attachments
Patch
(1.46 KB, patch)
2014-03-15 07:41 PDT
,
Byungseon Shin
no flags
Details
Formatted Diff
Diff
Patch
(1.58 KB, patch)
2014-03-19 17:24 PDT
,
Byungseon Shin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Byungseon Shin
Comment 1
2014-03-15 07:41:38 PDT
Created
attachment 226819
[details]
Patch
Dongseong Hwang
Comment 2
2014-03-18 23:19:56 PDT
non-reviewer lgtm smfr@, could you have a chance to review?
Dean Jackson
Comment 3
2014-03-19 17:13:59 PDT
Comment on
attachment 226819
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=226819&action=review
> Source/WebCore/ChangeLog:6 > +
https://bugs.webkit.org/show_bug.cgi?id=130292
> + > + Reviewed by NOBODY (OOPS!).
Please add something like "We were not returning the extension from the function." as an explanation.
Byungseon Shin
Comment 4
2014-03-19 17:24:38 PDT
Created
attachment 227238
[details]
Patch
WebKit Commit Bot
Comment 5
2014-03-19 20:13:19 PDT
Comment on
attachment 227238
[details]
Patch Clearing flags on attachment: 227238 Committed
r165943
: <
http://trac.webkit.org/changeset/165943
>
WebKit Commit Bot
Comment 6
2014-03-19 20:13:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug