Fix "WEBKIT_WEBGL_compressed_texture_pvrtc" extension support https://bugs.webkit.org/show_bug.cgi?id=130292

Patch by Byungseon Shin <sun.shin@lge.com> on 2014-03-19
Reviewed by Dean Jackson.

WebGLRenderingContext::getExtension was not returning WEBGL_compressed_texture_pvrtc extension.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getExtension):

Canonical link: https://commits.webkit.org/148492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165943 268f45cc-cd09-0410-ab3c-d52691b4dbfc